# DockerWorkshop

./: .gitignore  README.md
Crayons/: Crayons.sln
Crayons/Tests/: RestTest.http
Crayons/scripts/: docker-compose.yaml  publish.sh  run.sh
Crayons/src/Crayons.Api/: Crayons.Api.csproj  Startup.cs  appsettings.json
Crayons/src/Crayons.Api/Controllers/: BooksController.cs
Crayons/src/Crayons.Api/Domain/: LibraryDbContext.cs
Crayons/src/Crayons.Api/Domain/Configurations/: AuthorConfiguration.cs  BookConfiguration.cs
Crayons/src/Crayons.Api/Domain/Models/: Author.cs  BaseModel.cs  Book.cs
Crayons/src/Crayons.Api/Domain/Repositories/: BaseRepository.cs  BookRepository.cs
Crayons/src/Crayons.Api/Services/: BookService.cs
Crayons/src/Crayons.Web/: Dockerfile  Program.cs  Startup.cs  appsettings.json
Crayons/src/Crayons.Web/Consts/: ApiConsts.cs
Crayons/src/Crayons.Web/Models/: Author.cs  BaseModel.cs  Book.cs
Crayons/src/Crayons.Web/Pages/: About.cshtml.cs  Add.cshtml  Add.cshtml.cs  Contact.cshtml.cs  Details.cshtml  Details.cshtml.cs  Error.cshtml.cs  Index.cshtml  Index.cshtml.cs  _Layout.cshtml  _ViewImports.cshtml
Crayons/src/Crayons.Web/Services/: ApiService.cs
Presentation/slides/: index.md
Threader/: Dockerfile  README.MD  clear.sh  run.sh
Threader/project/: CMakeLists.txt  compile.sh  information.txt  map.txt
Threader/project/include/: Ghost.h  InformationProvider.h  MapProvider.h  Player.h  ThreadHelper.h
Threader/project/src/: Ghost.cpp  InformationProvider.cpp  MapProvider.cpp  Player.cpp  ThreadHelper.cpp  Threader.cpp
(+3 files in other folders)
